[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://gemwallet.com/"
description = "Gem Wallet Core library in Rust"
repository = "https://github.com/gemwalletcom/core"
documentation = "https://github.com/gemwalletcom"

[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/daemon",
    "apps/parser",
    "apps/setup",

    "bin/img-downloader",
    "bin/generate",
    "bin/uniffi-*",
    "bin/swapper-dump",

    "gemstone",

    "crates/primitives",
    "crates/blockchain",
    "crates/fiat",
    "crates/cacher",
    "crates/name_resolver",
    "crates/api_connector",
    "crates/settings",
    "crates/settings_chain",
    "crates/pricer",
    "crates/chain_primitives",

    "crates/security_*",
    "crates/gem_*",

    "crates/localizer",
    "crates/job_runner",
    "crates/search_index",
    "crates/nft",
    "crates/serde_serializers",
    "crates/number_formatter",
    "crates/pricer_dex",
    "crates/streamer",
]

default-members = [
    "apps/api",
    "apps/daemon",
    "apps/parser",
    "apps/setup",
    "bin/generate",
    "gemstone",
]

[workspace.dependencies]
typeshare = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.13.0"
serde_json = { version = "1.0.140" }
serde_urlencoded = { version = "0.7.1" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.19", features = ["json"] }
reqwest-middleware = { version = "0.4.2" }
reqwest-retry = { version = "0.7.0" }
reqwest-enum = { version = "0.4.0", features = ["jsonrpc"] }
idna = "1.0.3"
url = { version = "2.5.4" }
urlencoding = { version = "2.1.3" }
config = { version = "0.15.11", features = ["yaml"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = { version = "0.1.1" }

async-trait = { version = "0.1.88" }
async-std = { version = "1.13.1" }
prometheus-client = { version = "0.23.1" }
futures = { version = "0.3.31" }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0" }
indexmap = "2.9.0"
lazy_static = "1.5.0"
futures-util = "0.3.31"
uuid = { version = "1.17.0", features = ["v4"] }
rand = { version = "0.9.1" }
aws-sdk-s3 = { version = "1.92.0", features = ["behavior-version-latest"] }
itertools = { version = "0.14.0" }

# db
diesel = { version = "2.2.10", features = ["postgres", "chrono", "serde_json"] }
diesel_migrations = { version = "2.2.0" }
redis = { version = "0.32.0", features = [
    "tokio-comp",
    "json",
    "connection-manager",
] }
chrono = { version = "0.4.41", features = ["serde"] }
clickhouse = { version = "0.13.3" }
meilisearch-sdk = { version = "0.28.0" }
lapin = { version = "2.5.3" }

# crypto
base64 = { version = "0.22.1" }
blake2 = "0.10.6"
bech32 = { version = "0.11.0" }
bs58 = { version = "0.5.1", features = ["check"] }
hex = { version = "0.4.3" }
num-bigint = { version = "0.4.6", features = ["std", "serde"] }
num-traits = { version = "0.2.19" }
bigdecimal = "0.4"
cosmos-sdk-proto = { version = "0.27.0" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9" }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
jsonrpsee = { version = "0.25.1", features = ["http-client"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
itoa = { version = "1.0.15" }
curve25519-dalek = { version = "4.1.3" }
borsh = { version = "1.5.7", features = ["derive"] }
bcs = { version = "0.1.6" }
sui-types = { package = "sui-sdk-types", version = "0.0.4", features = [
    "serde",
] }
sui-transaction-builder = { package = "sui-transaction-builder", version = "0.0.4" }

uniffi = { version = "0.29.3" }
uniffi_bindgen = { version = "0.29.3" }

alloy-primitives = "1.1.0"
alloy-sol-types = { version = "1.1.0", features = ["eip712-serde"] }
alloy-dyn-abi = { version = "1.1.0", features = ["eip712"] }
alloy-ens = "1.0.9"
alloy-json-rpc = "1.0.9"
alloy-rpc-client = "1.0.9"
alloy-rpc-types = "1.0.9"

# localizer
i18n-embed = { version = "0.15.4", features = ["fluent-system", "autoreload"] }
i18n-embed-fl = { version = "0.9.4" }
once_cell = { version = "1.21.3" }
rust-embed = { version = "8.7.2" }

# numbers
rusty-money = { git = "https://github.com/varunsrin/rusty_money.git", rev = "bbc0150", features = [
    "iso",
] }
