[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://gemwallet.com/"
description = "Gem Wallet Core library in Rust"
repository = "https://github.com/gemwalletcom/core"
documentation = "https://github.com/gemwalletcom"

[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/daemon",
    "apps/dynode",
    "apps/parser",
    "apps/setup",

    "bin/img-downloader",
    "bin/generate",
    "bin/uniffi-*",
    "bin/swapper-dump",
    "bin/gas-bench",

    "gemstone",

    "crates/primitives",
    "crates/fiat",
    "crates/cacher",
    "crates/name_resolver",
    "crates/api_connector",
    "crates/settings",
    "crates/settings_chain",
    "crates/pricer",
    "crates/chain_primitives",
    "crates/chain_traits",

    "crates/security_*",
    "crates/gem_*",

    "crates/localizer",
    "crates/job_runner",
    "crates/search_index",
    "crates/nft",
    "crates/serde_serializers",
    "crates/number_formatter",
    "crates/pricer_dex",
    "crates/streamer",
    "crates/tracing",
]

default-members = [
    "apps/api",
    "apps/daemon",
    "apps/parser",
    "apps/setup",
    "bin/generate",
    "gemstone",
]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde_urlencoded = { version = "0.7.1" }

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.23", features = ["json"] }

url = { version = "2.5.6" }
config = { version = "0.15.14", features = ["yaml"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = { version = "0.1.1" }

async-trait = { version = "0.1.89" }
prometheus-client = { version = "0.24.0" }
futures = { version = "0.3.31" }
anyhow = { version = "1.0" }
uuid = { version = "1.18.0", features = ["v4"] }
rand = { version = "0.9.2" }

# db
redis = { version = "0.32.5", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }
chrono = { version = "0.4.41", features = ["serde"] }

# crypto
base64 = { version = "0.22.1" }
bech32 = { version = "0.11.0" }
bs58 = { version = "0.5.1", features = ["check"] }
hex = { version = "0.4.3" }
num-bigint = { version = "0.4.6", features = ["std", "serde"] }
num-traits = { version = "0.2.19" }
bigdecimal = "0.4"
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9" }
strum = { version = "0.27.2", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
curve25519-dalek = { version = "4.1.3" }
borsh = { version = "1.5.7", features = ["derive"] }
bcs = { version = "0.1.6" }
sui-types = { package = "sui-sdk-types", version = "0.0.6", features = ["serde"] }
sui-transaction-builder = { package = "sui-transaction-builder", version = "0.0.6" }
k256 = { version = "0.13.4" }

uniffi = { version = "0.29.4" }

alloy-primitives = "1.3.1"
alloy-sol-types = { version = "1.3.1", features = ["eip712-serde"] }
alloy-dyn-abi = { version = "1.3.1", features = ["eip712"] }
alloy-json-abi = { version = "1.3.1" }