[package]
name = "api"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
storage = { path = "../storage" }
pricer = { path = "../pricer" }
fiat = { path = "../fiat" }
settings = { path = "../settings" }
name_resolver = {path = "../name_resolver"}
diesel = { workspace = true }
async-trait = { workspace = true }
primitives = { path = "../primitives" }
api_connector = { path = "../api_connector" }
prometheus-client = { workspace = true }