[package]
name = "api"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
rocket = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
storage = { path = "../storage" }
pricer = { path = "../pricer" }
fiat = { path = "../fiat" }
swapper = { path = "../swapper" }
settings = { path = "../settings" }
settings_chain = { path = "../settings_chain" }
name_resolver = { path = "../name_resolver" }
primitives = { path = "../primitives" }
api_connector = { path = "../api_connector" }
prometheus-client = { workspace = true }
