[package]
name = "blockchain"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
typeshare = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
primitives = { path = "../primitives" }
ns_address_codec = { path = "../ns_address_codec" }
chrono = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
ethaddr = { workspace = true }
reqwest-middleware =  { workspace = true }
reqwest-retry =  { workspace = true }
cosmos-sdk-proto = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }