[package]
name = "blockchain"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
typeshare = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
primitives = { path = "../primitives" }
ns_address_codec = { path = "../ns_address_codec" }
chrono = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
reqwest-middleware = { workspace = true }
cosmos-sdk-proto = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
jsonrpsee = { workspace = true }
curve25519-dalek = { workspace = true }
thiserror = { workspace = true }
