[package]
name = "deamon"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
pricer = { path = "../pricer" }
settings = { path = "../settings" }
storage = { path = "../storage" }
api_connector = { path = "../api_connector" }
primitives = { path = "../primitives" }
