[package]
name = "fiat"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
hmac = "0.12.1"
sha2 = "0.10.7"
base64 = { workspace = true }
futures = { workspace = true }
storage = { path = "../storage" }
async-trait = { workspace = true }
primitives = { path = "../primitives" }