[package]
name = "fiat"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
storage = { path = "../storage" }
async-trait = { workspace = true }
primitives = { path = "../primitives" }