[package]
edition = "2021"
name = "gemstone"
version = "0.31.1"

[lib]
crate-type = [
    "staticlib", # iOS
    "rlib",      # for Other crate
    "cdylib",    # Android
]

name = "gemstone"

[features]
default = []
reqwest_provider = ["dep:reqwest"]

[dependencies]
primitives = { path = "../crates/primitives" }
gem_cosmos = { path = "../crates/gem_cosmos" }
gem_solana = { path = "../crates/gem_solana" }
gem_ton = { path = "../crates/gem_ton" }
gem_bsc = { path = "../crates/gem_bsc" }
gem_evm = { path = "../crates/gem_evm" }
gem_sui = { path = "../crates/gem_sui" }
gem_aptos = { path = "../crates/gem_aptos" }
gem_hash = { path = "../crates/gem_hash" }
gem_jsonrpc = { path = "../crates/gem_jsonrpc" }
gem_client = { path = "../crates/gem_client" }
gem_hypercore = { path = "../crates/gem_hypercore" }
gem_bitcoin = { path = "../crates/gem_bitcoin" }
gem_cardano = { path = "../crates/gem_cardano" }
gem_stellar = { path = "../crates/gem_stellar", features = ["rpc", "typeshare"] }
gem_xrp = { path = "../crates/gem_xrp", features = ["rpc", "typeshare"] }
serde_serializers = { path = "../crates/serde_serializers" }
chain_traits = { path = "../crates/chain_traits" }

reqwest = { workspace = true, optional = true }

bcs.workspace = true
sui-types.workspace = true
sui-transaction-builder.workspace = true
# uniffi
uniffi.workspace = true
thiserror.workspace = true

anyhow.workspace = true
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true }

base64.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
async-trait.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
hex.workspace = true
url.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
futures.workspace = true
bs58 = { workspace = true }
borsh.workspace = true
lazy_static.workspace = true
bigdecimal.workspace = true
rand.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
solana-primitives.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tokio.workspace = true

[[test]]
name = "integration_test"
test = false
