[package]
edition = { workspace = true }
name = "gemstone"
version = "0.31.1"

[lib]
crate-type = [
    "staticlib", # iOS
    "rlib",      # for Other crate
    "cdylib",    # Android
]

name = "gemstone"

[features]
default = []
reqwest_provider = ["dep:reqwest", "gem_swapper/reqwest_provider"]
swap_integration_tests = ["reqwest_provider"]

[dependencies]
gem_swapper = { path = "../crates/gem_swapper" }
primitives = { path = "../crates/primitives" }
gem_cosmos = { path = "../crates/gem_cosmos", features = ["rpc"] }
gem_solana = { path = "../crates/gem_solana", features = ["rpc"] }
gem_ton = { path = "../crates/gem_ton", features = ["rpc"] }
gem_tron = { path = "../crates/gem_tron", features = ["rpc"] }
gem_evm = { path = "../crates/gem_evm", features = ["rpc"] }
gem_sui = { path = "../crates/gem_sui", features = ["rpc"] }
gem_aptos = { path = "../crates/gem_aptos", features = ["rpc"] }
gem_hash = { path = "../crates/gem_hash" }
gem_jsonrpc = { path = "../crates/gem_jsonrpc" }
gem_client = { path = "../crates/gem_client" }
gem_hypercore = { path = "../crates/gem_hypercore" }
gem_bitcoin = { path = "../crates/gem_bitcoin", features = ["rpc"] }
gem_cardano = { path = "../crates/gem_cardano", features = ["rpc"] }
gem_algorand = { path = "../crates/gem_algorand", features = ["rpc"] }
gem_stellar = { path = "../crates/gem_stellar", features = ["rpc"] }
gem_xrp = { path = "../crates/gem_xrp", features = ["rpc"] }
gem_near = { path = "../crates/gem_near", features = ["rpc"] }
gem_polkadot = { path = "../crates/gem_polkadot", features = ["rpc"] }
serde_serializers = { path = "../crates/serde_serializers" }
chain_traits = { path = "../crates/chain_traits" }

reqwest = { workspace = true, optional = true }

# uniffi
uniffi.workspace = true

chrono = { workspace = true }

serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
alloy-primitives.workspace = true
hex.workspace = true
num-bigint.workspace = true
futures.workspace = true
bs58 = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tokio.workspace = true
