[package]
name = "name_resolver"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
ethers = { workspace = true }
primitives = { path = "../primitives" }
ns_address_codec = { path = "../ns_address_codec"}
base64 = { workspace = true }
ethaddr = { workspace = true }
sha2 = "0.9"
