[package]
name = "name_resolver"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
primitives = { path = "../primitives" }
ns_address_codec = { path = "../ns_address_codec" }
base64 = { workspace = true }
ethaddr = { workspace = true }
jsonrpsee = { workspace = true }
tiny-keccak = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test ={ version = "*" }
