[package]
name = "name_resolver"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
primitives = { path = "../primitives" }
naming = { path = "../naming" }
base64 = { workspace = true }
jsonrpsee = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = { version = "*" }
