[package]
name = "parser"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
primitives = { path = "../primitives" }
storage = { path = "../storage" }
settings = { path = "../settings" }
blockchain = { path = "../blockchain" }
api_connector = { path = "../api_connector" }
tokio = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
futures = { workspace = true }
reqwest-middleware =  { workspace = true }
reqwest-retry =  { workspace = true }