[package]
name = "parser"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde_json = { workspace = true }
primitives = { path = "../primitives" }
storage = { path = "../storage" }
settings = { path = "../settings" }
settings_chain = { path = "../settings_chain" }
blockchain = { path = "../blockchain" }
api_connector = { path = "../api_connector" }
tokio = { workspace = true }
futures = { workspace = true }
