[package]
name = "pricer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
storage = { path = "../storage" }
redis = { workspace = true }
reqwest = { workspace = true }
primitives = { path = "../primitives" }
chrono = { workspace = true }
