[package]
name = "primitives"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
typeshare = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
chrono = { workspace = true}
num-bigint = { workspace = true}
num-traits = { workspace = true}
strum = { workspace = true}
rust_decimal = { workspace = true }
# make it optional feature
rocket = { workspace = true }
