[package]
name = "settings_chain"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
primitives = { path = "../primitives" }
blockchain = { path = "../blockchain" }
settings = { path = "../settings" }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
