[package]
name = "storage"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
chrono = { workspace = true }
primitives = { path = "../primitives" }