[package]
name = "swapper"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_urlencoded = { workspace = true }
primitives = { path = "../primitives" }
blockchain = { path = "../blockchain" }
