[package]
name = "api"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
prometheus-client = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
redis = { workspace = true }

storage = { path = "../../crates/storage" }
pricer = { path = "../../crates/pricer" }
fiat = { path = "../../crates/fiat" }
settings = { path = "../../crates/settings" }
settings_chain = { path = "../../crates/settings_chain" }
name_resolver = { path = "../../crates/name_resolver" }
primitives = { path = "../../crates/primitives" }
api_connector = { path = "../../crates/api_connector" }
chain_primitives = { path = "../../crates/chain_primitives" }
search_index = { path = "../../crates/search_index" }
nft_provider = { path = "../../crates/nft_provider" }
nft_client = { path = "../../crates/nft_client" }
cacher = { path = "../../crates/cacher" }
streamer = { path = "../../crates/streamer" }

security_provider = { path = "../../crates/security_provider" }
security_hashdit = { path = "../../crates/security_hashdit" }
security_goplus = { path = "../../crates/security_goplus" }
rocket_ws = { workspace = true }
