[package]
name = "daemon"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
aws-sdk-s3 = { workspace = true }
itertools = { workspace = true}
async-trait = { workspace = true }

settings = { path = "../../crates/settings" }
storage = { path = "../../crates/storage" }
api_connector = { path = "../../crates/api_connector" }
coingecko = { path = "../../crates/coingecko" }
pricer = { path = "../../crates/pricer" }
primitives = { path = "../../crates/primitives" }
fiat = { path = "../../crates/fiat" }
nft_provider = { path = "../../crates/nft_provider" }
job_runner = { path = "../../crates/job_runner" }
chain_primitives = { path = "../../crates/chain_primitives" }
search_index = { path = "../../crates/search_index" }
cacher = { path = "../../crates/cacher" }
streamer = { path = "../../crates/streamer" }
localizer = { path = "../../crates/localizer" }