[package]
name = "daemon"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
async-trait = { workspace = true }

gem_tracing = { path = "../../crates/tracing", features = ["sentry"] }
settings = { path = "../../crates/settings" }
storage = { path = "../../crates/storage" }
api_connector = { path = "../../crates/api_connector" }
coingecko = { path = "../../crates/coingecko" }
pricer = { path = "../../crates/pricer" }
primitives = { path = "../../crates/primitives" }
fiat = { path = "../../crates/fiat" }
nft = { path = "../../crates/nft" }
job_runner = { path = "../../crates/job_runner" }
chain_primitives = { path = "../../crates/chain_primitives" }
search_index = { path = "../../crates/search_index" }
cacher = { path = "../../crates/cacher" }
streamer = { path = "../../crates/streamer" }
localizer = { path = "../../crates/localizer" }
settings_chain = { path = "../../crates/settings_chain" }
chain_traits = { path = "../../crates/chain_traits" }
