[package]
name = "daemon"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
async-trait = { workspace = true }
num-bigint = { workspace = true }

gem_tracing = { path = "../../crates/tracing", features = ["sentry"] }
settings = { path = "../../crates/settings" }
storage = { path = "../../crates/storage" }
api_connector = { path = "../../crates/api_connector" }
coingecko = { path = "../../crates/coingecko" }
pricer = { path = "../../crates/pricer" }
prices_dex = { path = "../../crates/prices_dex" }
primitives = { path = "../../crates/primitives" }
fiat = { path = "../../crates/fiat" }
nft = { path = "../../crates/nft" }
job_runner = { path = "../../crates/job_runner" }
chain_primitives = { path = "../../crates/chain_primitives" }
search_index = { path = "../../crates/search_index" }
cacher = { path = "../../crates/cacher" }
streamer = { path = "../../crates/streamer" }
localizer = { path = "../../crates/localizer" }
support = { path = "../../crates/support" }
settings_chain = { path = "../../crates/settings_chain" }
chain_traits = { path = "../../crates/chain_traits" }
number_formatter = { path = "../../crates/number_formatter" }
gem_rewards = { path = "../../crates/gem_rewards" }
gem_client = { path = "../../crates/gem_client", features = ["reqwest"] }
gem_evm = { path = "../../crates/gem_evm", features = ["rpc", "reqwest"] }
gem_jsonrpc = { path = "../../crates/gem_jsonrpc", features = ["client", "reqwest"] }
